# django-base16-admin

./: README.md  pyproject.toml
.github/workflows/: release.yml
django_demo/django_demo/: settings.py  wsgi.py
src/base16_admin/: apps.py  context_processors.py
src/base16_admin/static/admin/css/: base.css  dark_mode.css
src/base16_admin/static/admin/themes/: cupcake.css  tokyo-city-dark.css  tokyo-city-light.css
src/base16_admin/static/base16_admin/: base.css  forms.css  nav_sidebar.css
src/base16_admin/templates/admin/: base_site.html
