[project]
name = "django-base16-admin"
version = "0.1.4"
description = "Base16 color themes for Django Admin."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "stabldev", email = "thestabldev@gmail.com" }]
requires-python = ">=3.13"
keywords = ["django", "base16-themes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=5.2.7",
]

[project.urls]
homepage = "https://github.com/stabldev/django-base16-admin"
repository = "https://github.com/stabldev/django-base16-admin"
bug-tracker = "https://github.com/stabldev/django-base16-admin/issues"
documentation = "https://github.com/stabldev/django-base16-admin#readme"

[build-system]
requires = ["uv_build>=0.8.20,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "base16_admin"

[tool.pyright]
reportMissingTypeStubs = "none"
reportIncompatibleVariableOverride = "none"
reportUnknownVariableType = "none"
reportAny = "none"
